# exmpl-cmake-grpc

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
.github/workflows/: build-fetchcontent.yml  build-latest-deps.yml  build.yml
client/: CMakeLists.txt
client/src/: main.cpp
cmake/: grpc.cmake  protobuf_gen.cmake
proto/: CMakeLists.txt
proto/myproto/: address.proto  addressbook.proto
server/: CMakeLists.txt
server/src/: main.cpp
